--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/BackendPDG
-spring.datasource.username=postgres
-spring.datasource.password=Skpow1234
+#spring.datasource.url=jdbc:postgresql://localhost:5432/BackendPDG
+#spring.datasource.username=postgres
+#spring.datasource.password=Skpow1234
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
 
 # Hibernate Properties
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.use_sql_comments = true
 spring.jpa.properties.hibernate.format_sql = true
